alteação de imagens e ajuste nos textos

--- a/templates/about.html
+++ b/templates/about.html
@@ -88,14 +88,14 @@
               <img src="{{ url_for('static', filename = 'images/plug.png')}}" alt="">
             </div>
             <p>
-              Atualmente existem inúmeras fontes de dados abertos disponíveis ao público nas plataformas governamentais.
-              Esses dados são disponibilizados de forma bruta, dificultado a interpretação.
-              </br>
-              Com o objetivo de facilitar o acesso e a interpretação desses dados saúde e populacional para a população
-              de Santana de Parnaíba, desenvolvemos a plataforma Parnaíba Connect. Essa ferramenta inovadora reúne
-              informações públicas sobre saúde e população, apresentando-as de forma clara, intuitiva e acessível a
-              todos.
-
+              O portal <b>Parnaíba Connect</b> é um trabalho de graduação desenvolvido pelos alunos Jefferson Vitorino,
+              Leandro
+              Ferreira e Thiago Ibiapino, estudantes do curso de Tecnologia em Ciência de Dados na Fatec Santana de
+              Parnaíba. O objetivo do projeto é transmitir aos cidadãos parnaibanos e outros interessados informações
+              relacionadas ao indicador de Saúde e Bem-Estar, contemplado no Objetivo de Desenvolvimento Sustentável Nº
+              3. Isto consolidando dados de diferentes fontes, como por exemplo, o SEADE, Portal da Transparência,
+              Censo, IBGE e outras. Com esses dados, entende-se como possível gerar maior engajamento e participação
+              social.
             </p>
             <!--<a href="">
               Saiba Mais
@@ -190,7 +190,7 @@
         <div class="col-lg-7 col-md-9 mx-auto">
           <p>
             &copy; 2024 - Todos os direitos reservados
-            <a href="/index">www.parnaibaconnect.com.br</a>
+            <a href="/index">Parnaiba Connect</a>
           </p>
         </div>
       </div>
