--- a/templates/contact.html
+++ b/templates/contact.html
@@ -201,7 +201,7 @@
         <div class="col-lg-7 col-md-9 mx-auto">
           <p>
             &copy; 2024 - Todos os direitos reservados
-            <a href="/index">www.parnaibaconnect.com.br</a>
+            <a href="/index">Parnaiba Connect</a>
           </p>
         </div>
       </div>
