--- a/static/css/style.css
+++ b/static/css/style.css
@@ -366,6 +366,7 @@ a:focus {
   color: #2e0e5f;
   font-weight: 600;
   position: relative;
+  text-align: justify;
 }
 
 .service_section .service_container .box:hover,
