--- a/templates/contact.html
+++ b/templates/contact.html
@@ -209,8 +209,8 @@
   </footer>
   <!-- footer section -->
 
-  <script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
-  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>
+  <!--<script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
+  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>-->
   <script src="{{ url_for('static', filename = 'js/script.js')}}"></script>
 </body>
 
