--- a/templates/painel_dados.html
+++ b/templates/painel_dados.html
@@ -106,13 +106,13 @@
               </div>
             </div>
           </nav>
-
         </div>
       </div>
-      <iframe
-        src="https://app.powerbi.com/view?r=eyJrIjoiYjM0YjBlNWItNGRmZC00MjgwLWJlYjAtNDJjMjMxMzNkYzc4IiwidCI6ImJjOTljZTFhLWYwOGEtNDY4Yy1hOGJlLWI0NmQzZDUyMzRhNiJ9"
-        class="col-12 iframe-dashboard" frameborder="0" allowfullscreen="" title="Painel PowerBi Transparencia"
-        width="2000" height="1200"></iframe>
+    </div>
+    <div id="iframe-container"></div>
+    <!--    <iframe  src="https://app.powerbi.com/view?r=eyJrIjoiYjM0YjBlNWItNGRmZC00MjgwLWJlYjAtNDJjMjMxMzNkYzc4IiwidCI6ImJjOTljZTFhLWYwOGEtNDY4Yy1hOGJlLWI0NmQzZDUyMzRhNiJ9"
+      class="col-12 iframe-dashboard" frameborder="0" allowfullscreen="" title="Painel PowerBi Transparencia"
+      width="2000" height="1200"></iframe>-->
   </section>
 
   <!-- end blog section -->
@@ -199,9 +199,9 @@
   <!-- footer section -->
 
 
-  <script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
-  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>
-
+  <!--<script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
+  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>-->
+  <script src="{{ url_for('static', filename = 'js/script_painel.js')}}"></script>
 </body>
 
 </html>
