--- a/templates/historia.html
+++ b/templates/historia.html
@@ -200,7 +200,7 @@
       </div>
       <div class="btn-box">
         <a href="https://www.tourvirtual360.com.br/santana/" target="_blank" rel="noopener noreferrer">
-          Saiba Mais
+          Tour Virtual
         </a>
       </div>
     </div>
@@ -284,8 +284,8 @@
   <!-- footer section -->
 
 
-  <script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
-  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>
+  <!--<script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
+  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>-->
 
 
 </body>
