--- a/templates/index.html
+++ b/templates/index.html
@@ -374,8 +374,8 @@
   <!-- footer section -->
 
 
-  <script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
-  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>
+  <!--<script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
+  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>-->
 
 </body>
 
