--- a/templates/contact.html
+++ b/templates/contact.html
@@ -53,9 +53,6 @@
                   <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/about"> Sobre</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="/historia"> Cidade </a>
                 </li>
                 <li class="nav-item">
@@ -63,6 +60,9 @@
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="/contact">Contato </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/about"> Sobre</a>
                 </li>
               </ul>
             </div>
@@ -82,7 +82,7 @@
         <h2>
           Contate-nos
         </h2>
-        <img src="{{ url_for('static', filename = 'images/plug.png')}}" alt="">
+        <!--<img src="{{ url_for('static', filename = 'images/plug.png')}}" alt="">-->
       </div>
     </div>
     <div class="container">
@@ -154,9 +154,6 @@
               <li><a href="/index"><span>
                     <h4>Home</h4>
                   </span></a></li>
-              <li><a href="/about"><span>
-                    <h4>Sobre</h4>
-                  </span></a></li>
               <li><a href="/historia"><span>
                     <h4>Cidade</h4>
                   </span></a></li>
@@ -165,6 +162,9 @@
                   </span></a></li>
               <li><a href="/contact"><span>
                     <h4>Contato</h4>
+                  </span></a></li>
+              <li><a href="/about"><span>
+                    <h4>Sobre</h4>
                   </span></a></li>
             </ul>
 
