--- a/templates/historia.html
+++ b/templates/historia.html
@@ -52,9 +52,6 @@
                 <li class="nav-item ">
                   <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/about"> Sobre</a>
-                </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="/historia"> Cidade </a>
                 </li>
@@ -63,6 +60,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/contact">Contato </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/about"> Sobre</a>
                 </li>
               </ul>
             </div>
@@ -81,7 +81,7 @@
         <h2>
           Cidade Santana de Parnaíba
         </h2>
-        <img src="{{ url_for('static', filename = 'images/plug.png')}}" alt="">
+        <!--<img src="{{ url_for('static', filename = 'images/plug.png')}}" alt="">-->
       </div>
 
       <div class="service_container">
@@ -228,9 +228,6 @@
               <li><a href="/index"><span>
                     <h4>Home</h4>
                   </span></a></li>
-              <li><a href="/about"><span>
-                    <h4>Sobre</h4>
-                  </span></a></li>
               <li><a href="/historia"><span>
                     <h4>Cidade</h4>
                   </span></a></li>
@@ -239,6 +236,9 @@
                   </span></a></li>
               <li><a href="/contact"><span>
                     <h4>Contato</h4>
+                  </span></a></li>
+              <li><a href="/about"><span>
+                    <h4>Sobre</h4>
                   </span></a></li>
             </ul>
 
