--- a/templates/painel_dados_saude.html
+++ b/templates/painel_dados_saude.html
@@ -94,13 +94,13 @@
                     <a class="nav-link" href="/painel_dados">Saúde <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/painel_dados"> Populacional</a>
+                    <a class="nav-link" href="/painel_dados_populacao"> Populacional</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/painel_dados"> Prefeitura </a>
+                    <a class="nav-link" href="/painel_dados_prefeitura"> Prefeitura </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/painel_dados"> Dengue </a>
+                    <a class="nav-link" href="/painel_dados_dengue"> Dengue </a>
                   </li>
                 </ul>
               </div>
