--- a/templates/index.html
+++ b/templates/index.html
@@ -82,19 +82,17 @@
             <div class="detail_box">
               <div class="heading_container">
                 <p>
-                <h2>
-                  Parnaíba Connect: <br>
-                  Os dados a serviço da cidade.
-                </h2>
+                <h3>
+                  <b>Parnaíba Connect: <br>
+                    Os dados a serviço da cidade.</b>
+                </h3>
                 </p>
               </div>
               <p>
-                No cenário digital atual, a grande quantidade de dados nem sempre facilita o acesso à informação de
-                qualidade. Em Santana de Parnaíba, dados essenciais de saúde estão fragmentados em diversas fontes, o
-                que dificulta a consulta e interpretação pela população. Este portal busca resolver esse problema,
-                centralizando e organizando dados de saúde do município para oferecer informações acessíveis e
-                relevantes. Além de simplificar o acesso, incentiva o engajamento cidadão por meio de feedbacks e
-                sugestões, promovendo a democratização da informação para benefício de todos.</p>
+                No cenário atual, o acesso a informações de qualidade pode ser um desafio. Pensando nisso, o portal de
+                saúde de Santana de Parnaíba centraliza e organiza dados essenciais de saúde do município, facilitando a
+                consulta e compreensão para todos. A plataforma visa incentivar a participação da população, permitindo
+                feedbacks e sugestões para promover a transparência e o engajamento cidadão.</p>
             </div>
           </div>
           <div class="col-lg-5 col-md-6 offset-lg-1">
@@ -104,17 +102,17 @@
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                       <div class="img-box">
-                        <img src="{{ url_for('static', filename = 'images/imagem_home_1_nova.png')}}" alt="">
+                        <img src="{{ url_for('static', filename = 'images/imagem_home_1.jpg')}}" alt="">
                       </div>
                     </div>
                     <div class="carousel-item">
                       <div class="img-box">
-                        <img src="{{ url_for('static', filename = 'images/imagem_home_2_nova.jpg')}}" alt="">
+                        <img src="{{ url_for('static', filename = 'images/imagem_home_2.jpg')}}" alt="">
                       </div>
                     </div>
                     <div class="carousel-item">
                       <div class="img-box">
-                        <img src="{{ url_for('static', filename = 'images/imagem_home_3_nova.png')}}" alt="">
+                        <img src="{{ url_for('static', filename = 'images/imagem_home_3.jpg')}}" alt="">
                       </div>
                     </div>
                   </div>
@@ -289,6 +287,11 @@
             </div>
           </div>
         </div>-->
+    </div>
+    <div class="btn-box">
+      <a href="/painel_dados">
+        Saiba Mais
+      </a>
     </div>
     </div>
   </section>
