--- a/templates/historia.html
+++ b/templates/historia.html
@@ -284,8 +284,8 @@
   <!-- footer section -->
 
 
-  <!--<script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
-  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>-->
+  <script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
+  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>
 
 
 </body>
