--- a/templates/painel_dados_saude.html
+++ b/templates/painel_dados_saude.html
@@ -199,8 +199,8 @@
   <!-- footer section -->
 
 
-  <!--<script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
-  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>-->
+  <script src="{{ url_for('static', filename = 'js/jquery-3.4.1.min.js')}}"></script>
+  <script src="{{ url_for('static', filename = 'js/bootstrap.js')}}"></script>
   <script src="{{ url_for('static', filename = 'js/script_painel.js')}}"></script>
 </body>
 
