Inclusão do Painel de dados populacional

--- a/templates/painel_dados_populacao.html
+++ b/templates/painel_dados_populacao.html
@@ -99,8 +99,8 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/painel_dados_prefeitura"> Prefeitura </a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/painel_dados_dengue"> Dengue </a>
+                  <!--<li class="nav-item">
+                    <a class="nav-link" href="/painel_dados_dengue"> Dengue </a>-->
                   </li>
                 </ul>
               </div>
@@ -108,8 +108,14 @@
           </nav>
         </div>
       </div>
+      <div class="d-flex flex-column align-items-center">
+        <p>
+        <h4>Painel de dados Populacional</h4>
+        </p>
+      </div>
+      <div id="iframe-container-populacao"></div>
     </div>
-    <div id="iframe-container-populacao"></div>
+
     <!--    <iframe  src="https://app.powerbi.com/view?r=eyJrIjoiYjM0YjBlNWItNGRmZC00MjgwLWJlYjAtNDJjMjMxMzNkYzc4IiwidCI6ImJjOTljZTFhLWYwOGEtNDY4Yy1hOGJlLWI0NmQzZDUyMzRhNiJ9"
       class="col-12 iframe-dashboard" frameborder="0" allowfullscreen="" title="Painel PowerBi Transparencia"
       width="2000" height="1200"></iframe>-->
