--- a/templates/painel_dados_saude.html
+++ b/templates/painel_dados_saude.html
@@ -99,8 +99,8 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/painel_dados_prefeitura"> Prefeitura </a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/painel_dados_dengue"> Dengue </a>
+                  <!--<li class="nav-item">
+                    <a class="nav-link" href="/painel_dados_dengue"> Dengue </a>-->
                   </li>
                 </ul>
               </div>
