inclusão dos paineis

--- a/templates/historia.html
+++ b/templates/historia.html
@@ -103,7 +103,7 @@
             </p>
           </div>
         </div>
-        <div class="box active">
+        <div class="box">
           <div class="img-box">
             <a href="https://pt.wikipedia.org/wiki/Igreja_Matriz_de_Santana_de_Parna%C3%ADba#/media/Ficheiro:Igreja_matriz_Santa_Anna.jpg"
               target="_blank" rel="noopener noreferrer">
