--- a/templates/painel_dados_populacao.html
+++ b/templates/painel_dados_populacao.html
@@ -97,7 +97,7 @@
                     <a class="nav-link" href="/painel_dados_populacao"> Populacional </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/painel_dados_prefeitura"> Prefeitura </a>
+                    <a class="nav-link" href="/painel_dados_prefeitura"> Estatísticas Vitais </a>
                   </li>
                   <!--<li class="nav-item">
                     <a class="nav-link" href="/painel_dados_dengue"> Dengue </a>-->
