--- a/templates/painel_dados_prefeitura.html
+++ b/templates/painel_dados_prefeitura.html
@@ -97,7 +97,7 @@
                     <a class="nav-link" href="/painel_dados_populacao"> Populacional</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="/painel_dados_prefeitura"> Prefeitura </a>
+                    <a class="nav-link" href="/painel_dados_prefeitura"> Estatísticas Vitais </a>
                   </li>
                   <!--<li class="nav-item">
                     <a class="nav-link" href="/painel_dados_dengue"> Dengue </a>-->
@@ -108,8 +108,14 @@
           </nav>
         </div>
       </div>
+      <div class="d-flex flex-column align-items-center">
+        <p>
+        <h4>Painel de dados Estatísticas Vitais</h4>
+        </p>
+      </div>
+      <div id="iframe-container-prefeitura"></div>
     </div>
-    <div id="iframe-container-prefeitura"></div>
+
     <!--    <iframe  src="https://app.powerbi.com/view?r=eyJrIjoiYjM0YjBlNWItNGRmZC00MjgwLWJlYjAtNDJjMjMxMzNkYzc4IiwidCI6ImJjOTljZTFhLWYwOGEtNDY4Yy1hOGJlLWI0NmQzZDUyMzRhNiJ9"
       class="col-12 iframe-dashboard" frameborder="0" allowfullscreen="" title="Painel PowerBi Transparencia"
       width="2000" height="1200"></iframe>-->
